增加event事件触发回放

--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/blocks/pager.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/blocks/pager.vm
@@ -57,5 +57,8 @@
             </a>
         </li>
     #end
+    <li class="page-item disabled">
+        <span class="page-link">总数：$pagerWrapper.count</span>
+    </li>
 </ul>
 #end
