--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/config/list.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/config/list.vm
@@ -42,7 +42,8 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/home.htm" target="_self">首页</a></li>
+                            <li class="breadcrumb-item"><a href="/home.htm" target="_self"
+                                                           onclick="changeTip('homePage')">首页</a></li>
                             <li class="breadcrumb-item active">配置管理</li>
                         </ol>
                     </div>
