--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/creen/creen.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/creen/creen.vm
@@ -126,7 +126,6 @@
                     <img src="/images/shoe.png" alt="">
                 </div>
                 <div class="data">
-                    <span>年回放</span>
                     <span id="yearReplay"></span>
                 </div>
                 <div class="shoeChart"></div>
@@ -136,7 +135,6 @@
                     <img src="/images/clothes.png" alt="">
                 </div>
                 <div class="data">
-                    <span>月回放</span>
                     <span id="monthReplay"></span>
                 </div>
                 <div class="clothesChart"></div>
@@ -146,7 +144,6 @@
                     <img src="/images/mz.png" alt="">
                 </div>
                 <div class="data">
-                    <span>日回放</span>
                     <span id="dayReplay"></span>
                 </div>
                 <div class="mzChart"></div>
@@ -207,9 +204,9 @@
                     $("#yearReplay").html(data.onlineBO.yearReplay);
                     $("#monthReplay").html(data.onlineBO.monthReplay);
                     $("#dayReplay").html(data.onlineBO.dayReplay);
-                    draw('.shoeChart', data.onlineBO.yearReplay, '回放率', data.onlineBO.yearNum, '#09c4ca');
-                    draw('.clothesChart', data.onlineBO.monthReplay, '回放率', data.onlineBO.monthNum, '#09c4ca');
-                    draw('.mzChart', data.onlineBO.dayReplay, '回放率', data.onlineBO.dayNum, '#09c4ca');
+                    draw('.shoeChart', data.onlineBO.yearReplay, '一致率', data.onlineBO.yearNum, '#09c4ca');
+                    draw('.clothesChart', data.onlineBO.monthReplay, '一致率', data.onlineBO.monthNum, '#09c4ca');
+                    draw('.mzChart', data.onlineBO.dayReplay, '一致率', data.onlineBO.dayNum, '#09c4ca');
                     lineChart('.lineChart', data.onlineBO.xdata, data.onlineBO.dataArr);
                     topColor();
                 }
