--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/index.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/index.vm
@@ -62,7 +62,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="/online/list.htm" target="three" id="onlienPage" class="nav-link">
+                        <a href="/online/list.htm" target="three" id="onlinePage" class="nav-link">
                             <i class="nav-icon fa fa-database"></i>
                             <p>
                                 在线流量
