--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/module/list.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/module/list.vm
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/home.htm" target="_self">首页</a></li>
+                            <li class="breadcrumb-item"><a href="/home.htm" target="_self" onclick="changeTip('homePage')">首页</a></li>
                             <li class="breadcrumb-item active">在线模块</li>
                         </ol>
                     </div>
