--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/replay/list.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/replay/list.vm
@@ -41,7 +41,8 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/home.htm" target="_self" onclick="changeTip('homePage')">首页</a></li>
+                            <li class="breadcrumb-item"><a href="/home.htm" target="_self"
+                                                           onclick="changeTip('homePage')">首页</a></li>
                             <li class="breadcrumb-item active">回放记录</li>
                         </ol>
                     </div>
@@ -178,7 +179,13 @@
                                         <tr style="text-align: center;">
                                             <td style="vertical-align: middle">$!data.appName</td>
                                             <td style="vertical-align: middle">$!{data.rTraceId}</td>
-                                            <td style="vertical-align: middle">$!data.url</td>
+                                            <td style="vertical-align: middle">
+                                                #if($!{data.url})
+                                                  $!{data.url}
+                                                #elseif($!{data.entranceDesc})
+                                                    $!{data.entranceDesc}
+                                                #end
+                                            </td>
                                             <td style="vertical-align: middle">$!data.traceId</td>
                                             <td style="vertical-align: middle">$!{data.repeatId}</td>
                                             <td style="vertical-align: middle">
