大屏配置模板化

--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/blocks/screenBase.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/blocks/screenBase.vm
@@ -1,7 +1,7 @@
 <!-- 头部模块 -->
 <header>
-    <h1><span>华夏星斗可视化</span></h1>
-    <p><span>HUALIFE STAR</span></p>
+    <h1><span>瑞众星斗可视化</span></h1>
+    <p><span>RUIINSURANCE STAR</span></p>
 </header>
 
 <div class="main">
