--- a/repeater-console/repeater-console-start/src/main/resources/velocity/templates/index.vm
+++ b/repeater-console/repeater-console-start/src/main/resources/velocity/templates/index.vm
@@ -43,7 +43,7 @@
                  alt="AdminLTE Logo"
                  class="brand-image img-circle elevation-3"
                  style="opacity: .8">
-            <span class="brand-text font-weight-light">华夏星斗流量录制回放平台</span>
+            <span class="brand-text font-weight-light">瑞众星斗流量录制回放平台</span>
         </a>
         <!-- Sidebar -->
         <div class="sidebar">
@@ -110,7 +110,7 @@
         <div class="float-right d-none d-sm-block">
             <b>Version</b> 1.0.0
         </div>
-        <strong>Copyright &copy; 2023-2024 <a href="#">华夏人寿保险股份有限公司</a>.</strong> All rights
+        <strong>Copyright &copy; 2023-2024 <a href="https://www.ruiinsurance.com">瑞众人寿保险有限责任公司</a>.</strong> All rights
         reserved.
     </footer>
 
